# ClawWASM

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  clawasm.gdextension
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  wasm-ci.yml
.superpowers/skills/: README.md  commit-discipline.md  engine-integration.md  godot-binding.md  memory-keeper.md  pr-review.md  ralph-loop.md  release-engineering.md  test-driven-development.md  wasm-build.md  writing-plans.md
clawasm/: Cargo.toml
clawasm/engine/: Cargo.toml  README.md
clawasm/engine/src/: lib.rs  main.rs  stream.rs
clawasm/engine/tests/: smoke.rs
clawasm/src/: engine_node.rs  lib.rs  llm_node.rs
docs/: ARCHITECTURE_REVIEW_sonnet.md  LEARNINGS.md  MEMORY.md  PLAN.md  TODO.md  guidelines.md  tests.md
examples/ai-character/: README.md  ai_character.gd  ai_character.gd.uid  ai_character.tscn  clawasm.gdextension  clawasm.gdextension.uid  project.godot
examples/hello-wasm/: Cargo.toml
examples/hello-wasm/src/: main.rs
examples/llm-chat/: README.md  chat.gd  chat.gd.uid  chat.tscn  clawasm.gdextension  clawasm.gdextension.uid  project.godot
examples/llm-chat/.godot/: extension_list.cfg
examples/llm-chat/addons/clawasm/: PLACE_CDYLIB_HERE.md
ralph/: PLAN.md  PROMPT.md  README.md  loop.sh
ralph/adapters/: README.md  claude-code.sh  codex.sh
scripts/: build-plugin.sh  download-model.sh  run-engine.sh  test-wasm.sh
tests/godot-smoke/: README.md  main.gd  main.tscn  main_headless.gd  main_headless.tscn  project.godot  project_headless.godot
