[package]
name = "clawasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# godot-rust v0.5 is the current Godot 4 binding crate (crate was at 0.15 conceptually in docs but
# published to crates.io under 0.x versioning). "v4" feature no longer exists in 0.5+; Godot 4
# is the only target.
godot = "0.5"
wasmedge-sys = "0.17.0"
