[package]
name = "clawasm-engine"
version = "0.2.0"
edition = "2021"
description = "Embedded WasmEdge engine wrapper for the ClawWASM Godot plugin."

[lib]
name = "engine"
path = "src/lib.rs"

[features]
# Default = no special behaviour. The engine always probes for the
# `wasmedge` CLI at runtime; if it's missing, `Instance::run` returns a
# friendly error.
default = []

# `with-wasmedge` gates the *integration tests* that require a working
# `wasmedge` binary on PATH and a built `examples/hello-wasm` artifact.
# It does not change the library surface or runtime behaviour. Kept as a
# named feature so `clawasm/with-wasmedge` can forward to it.
with-wasmedge = []

[dependencies]
anyhow = "1.0"
